tg-5513 [BD] Crea tabla para persistir contrarreferencias

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_29.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_29.yml
@@ -45,4 +45,163 @@ databaseChangeLog:
                   CALL fill_date_dimension('01-01-2021','01-01-2050');
 
 
+    - changeSet:
+        id: counter_reference-createTable
+        comment: Create table counter_reference
+        author: bchacon
+        changes:
+            - createTable:
+                tableName: counter_reference
+                columns:
+                    - column:
+                        autoIncrement: true
+                        constraints:
+                            primaryKey: true
+                            primaryKeyName: PK_counter_reference
+                        name: id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: patient_id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: reference_id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: clinical_specialty_id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: institution_id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: performed_date
+                        type: date
+                    - column:
+                        name: doctor_id
+                        type: int
+                    - column:
+                        name: patient_medical_coverage_id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: billable
+                        type: boolean
+                        defaultValue: ${boolean.false}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: created_by
+                        type: int
+                        defaultValue: -1
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: created_on
+                        type: datetime
+                        defaultValueDate: ${date.now}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: updated_by
+                        type: int
+                        defaultValue: -1
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: updated_on
+                        type: datetime
+                        defaultValueDate: ${date.now}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: deleted
+                        type: boolean
+                        defaultValue: ${boolean.false}
+                    - column:
+                        name: deleted_by
+                        type: int
+                    - column:
+                        name: deleted_on
+                        type: datetime
+                        
+            - addForeignKeyConstraint:
+                baseColumnNames: reference_id
+                baseTableName: counter_reference
+                constraintName: FK_counter_reference_reference_id
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: reference
+                validate: true
+           
+            - addForeignKeyConstraint:
+                baseColumnNames: patient_id
+                baseTableName: counter_reference
+                constraintName: FK_counter_reference_patient_id
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: patient
+                validate: true
+            
+            - addForeignKeyConstraint:
+                baseColumnNames: clinical_specialty_id
+                baseTableName: counter_reference
+                constraintName: FK_counter_reference_clinical_specialty_id
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: clinical_specialty
+                validate: true
+            
+            - addForeignKeyConstraint:
+                baseColumnNames: institution_id
+                baseTableName: counter_reference
+                constraintName: FK_counter_reference_institution_id
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: institution
+                validate: true
 
+            - addForeignKeyConstraint:
+                baseColumnNames: doctor_id
+                baseTableName: counter_reference
+                constraintName: FK_counter_reference_doctor_id
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: healthcare_professional
+                validate: true
+
+
+    - changeSet:
+        id: source_type-counter_reference-data
+        comment: Actualizar datos source_type
+        author: bchacon
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                INSERT INTO source_type VALUES (8, 'Contrarreferencia');
+
+    
+    - changeSet:
+        id: document_type-counter_reference-data
+        comment: Actualizar datos document_type
+        author: bchacon
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                INSERT INTO document_type VALUES (11, 'Contrarreferencia');
