--- a/back-end/clinic-history/pom.xml
+++ b/back-end/clinic-history/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.pladema</groupId>
         <artifactId>hospital-managment</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>ar.lamansys.sgh</groupId>
+    <groupId>ar.lamansys.hsi</groupId>
     <artifactId>clinic-history</artifactId>
 
     <properties>
@@ -20,14 +19,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <m2e.apt.activation>jdt_apt</m2e.apt.activation>
-        <lombok.version>1.18.10</lombok.version>
     </properties>
 
     <dependencies>
 
 
         <dependency>
-            <groupId>ar.lamansys.sgh</groupId>
+            <groupId>ar.lamansys.hsi</groupId>
             <artifactId>hospital-shared</artifactId>
             <version>${revision}</version>
         </dependency>
@@ -39,7 +37,7 @@
         </dependency>
 
         <dependency>
-            <groupId>net.pladema</groupId>
+            <groupId>ar.lamansys.hsi</groupId>
             <artifactId>interoperability</artifactId>
             <version>${revision}</version>
         </dependency>
@@ -72,7 +70,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.3.1.Final</version>
+            <version>${mapstruct.version}</version>
         </dependency>
 
         <dependency>
@@ -107,7 +105,7 @@
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>1.3.0.Beta2</version>
+                            <version>${mapstruct.version}</version>
                         </path>
                         <path>
                             <groupId>org.projectlombok</groupId>
