--- a/back-end/extensions/pom.xml
+++ b/back-end/extensions/pom.xml
@@ -3,15 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>net.pladema</groupId>
         <artifactId>hospital-managment</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
-    <groupId>ar.lamansys</groupId>
+    <groupId>ar.lamansys.hsi</groupId>
     <artifactId>extensions</artifactId>
     <description>HSI Extensiones</description>
 
