--- a/back-end/hospital-public-api/pom.xml
+++ b/back-end/hospital-public-api/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.pladema</groupId>
         <artifactId>hospital-managment</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>ar.lamansys.sgh</groupId>
+    <groupId>ar.lamansys.hsi</groupId>
     <artifactId>hospital-public-api</artifactId>
 
     <properties>
@@ -20,7 +19,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <m2e.apt.activation>jdt_apt</m2e.apt.activation>
-        <lombok.version>1.18.10</lombok.version>
     </properties>
 
     <dependencies>
