--- a/back-end/interoperability/pom.xml
+++ b/back-end/interoperability/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>net.pladema</groupId>
         <artifactId>hospital-managment</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
+    <groupId>ar.lamansys.hsi</groupId>
     <artifactId>interoperability</artifactId>
     <description>HAPI FHIR JPA Server</description>
     <packaging>${packaging.type}</packaging>
@@ -18,11 +17,16 @@
     <properties>
         <packaging.type>jar</packaging.type>
         <hapifhir.version>5.1.0</hapifhir.version>
-        <lombok.version>1.18.10</lombok.version>
         <jetty.version>9.4.30.v20200611</jetty.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>ar.lamansys.hsi</groupId>
+            <artifactId>hospital-shared</artifactId>
+            <version>${revision}</version>
+        </dependency>
 
         <dependency>
             <groupId>ar.lamansys</groupId>
@@ -34,13 +38,6 @@
             <groupId>ar.lamansys</groupId>
             <artifactId>sgx-backoffice</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>ar.lamansys.sgh</groupId>
-            <artifactId>hospital-shared</artifactId>
-            <version>${revision}</version>
         </dependency>
 
         <dependency>
@@ -123,7 +120,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.3.1.Final</version>
+            <version>${mapstruct.version}</version>
         </dependency>
 
         <dependency>
@@ -152,7 +149,7 @@
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>1.3.0.Beta2</version>
+                            <version>${mapstruct.version}</version>
                         </path>
                         <path>
                             <groupId>org.projectlombok</groupId>
