--- a/back-end/sgx-shared/pom.xml
+++ b/back-end/sgx-shared/pom.xml
@@ -204,21 +204,12 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<version>1.3.0.Beta2</version>
+							<version>1.3.1.Final</version>
 						</path>
 						<path>
 							<groupId>org.projectlombok</groupId>
