--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -151,3 +151,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_28.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_29.yml
+    relativeToChangelogFile: true
