tg-5563. Hotfix problemas de asignación de turnos

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_27.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_27.yml
@@ -573,3 +573,46 @@ databaseChangeLog:
                     WITH t1 AS (SELECT id FROM snomed_group WHERE ecl = '<<840546002 |exposición a coronavirus del síndrome respiratorio agudo severo 2 (evento)|' AND custom_id = 1) INSERT INTO snvs_group (group_id, event_id, group_event_id, environment, manual_classification_id) select t1.id, 309, 113, 2, 767 from t1;
                     WITH t1 AS (SELECT id FROM snomed_group WHERE ecl = '<<840546002 |exposición a coronavirus del síndrome respiratorio agudo severo 2 (evento)|' AND custom_id = 1) INSERT INTO snvs_group (group_id, event_id, group_event_id, environment, manual_classification_id) select t1.id, 309, 113, 2, 776 from t1;
                     WITH t1 AS (SELECT id FROM snomed_group WHERE ecl = '<<840546002 |exposición a coronavirus del síndrome respiratorio agudo severo 2 (evento)|' AND custom_id = 1) INSERT INTO snvs_group (group_id, event_id, group_event_id, environment, manual_classification_id) select t1.id, 309, 113, 2, 790 from t1;
+
+    - changeSet:
+          id: fill_date_dimension-createProcedure-27
+          author: etrapani
+          changes:
+              - createProcedure:
+                    dbms: postgresql
+                    encoding: UTF-8
+                    procedureBody: |-
+                        DROP PROCEDURE IF EXISTS fill_date_dimension;
+                        CREATE PROCEDURE fill_date_dimension(IN startdate DATE,IN stopdate DATE)
+                        LANGUAGE plpgsql
+                        AS $$
+                        DECLARE
+                            currentdate DATE;
+                        BEGIN
+                            currentdate := startdate;
+                            WHILE currentdate <= stopdate LOOP
+                                BEGIN
+                                    INSERT INTO date_type VALUES (
+                                        currentdate,
+                                        EXTRACT(DAY FROM currentdate),
+                                        EXTRACT(MONTH FROM currentdate),
+                                        EXTRACT(YEAR FROM currentdate),
+                                        EXTRACT(DOW FROM currentdate)
+                                        );
+                                EXCEPTION WHEN OTHERS THEN
+                                    RAISE NOTICE '% % %', SQLERRM, SQLSTATE, currentdate;
+                                END;
+                                currentdate := currentdate + '1 day'::INTERVAL ;
+                            END LOOP;
+                        END; $$;
+                    procedureName: fill_date_dimension
+                    relativeToChangelogFile: true
+
+    - changeSet:
+          id: load_dates_to_2050-27
+          author: etrapani
+          changes:
+              - sql:
+                    dbms: postgresql
+                    sql: |-
+                        CALL fill_date_dimension('01-01-2021','01-01-2050');
