tg-5509. [BE] Manejo de happy path en el reporte de snvs

--- a/back-end/interoperability/src/test/resources/snvs-e2e-test.properties
+++ b/back-end/interoperability/src/test/resources/snvs-e2e-test.properties
@@ -2,3 +2,5 @@ ws.sisa.snvs.appId.value=PruebasWSQA_SNVS_ID
 ws.sisa.snvs.appKey.value=PruebasWSQA_SNVS_KEY
 ws.sisa.snvs.environment=QA
 app.feature.HABILITAR_REPORTE_EPIDEMIOLOGICO=true
+ws.sisa.snvs.enabled=true
+ws.sisa.snvs.rest-client.config.trust-invalid-certificate=true
