--- a/back-end/hospital-public-api/pom.xml
+++ b/back-end/hospital-public-api/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>mapstruct</artifactId>
             <version>1.3.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>ar.lamansys.hsi</groupId>
+            <artifactId>hospital-shared</artifactId>
+            <version>${revision}</version>
+        </dependency>
 
     </dependencies>
 
