tg-5594 Unifico y centralizo properties

--- a/back-end/sgx-auth/src/main/resources/authentication.properties
+++ b/back-end/sgx-auth/src/main/resources/authentication.properties
@@ -1,6 +1,6 @@
 # ============= TOKEN ===========
 token.secret=${TOKEN_SECRET}
-token.header=X-Auth-Token
+token.header=Authorization
 
 # Vencimientos de tokens: s for seconds, m for minutes, h for hours, d for days
 token.expiration=${TOKEN_EXPIRATION:30m}
@@ -8,3 +8,6 @@ refreshToken.expiration=${REFRESHTOKEN_EXPIRATION:2d}
 validationToken.expiration=${VALIDTOKEN_EXPIRATION:1d}
 
 api-key.header=api-key
+
+# Tiempo de expiracion de password reset token
+password.reset.token.expiration=2d
