tg-5603. [BE] Nomivac agregar propiedad para ignorar certificado https vencido

--- a/back-end/interoperability/src/test/resources/nomivac-e2e-test.properties
+++ b/back-end/interoperability/src/test/resources/nomivac-e2e-test.properties
@@ -19,6 +19,7 @@ ws.federar.auth.signKey=federar
 #Nomivac properties
 ws.nomivac.synchronization.url.base=https://bus-dev.msal.gob.ar/fhir/
 ws.nomivac.synchronization.cron.config=0 0/1 * 1/1 * ?
+ws.nomivac.rest-client.config.trust-invalid-certificate=true
 
 # ===============================
 # INTEROPERABILITY SERVICES
@@ -29,3 +30,6 @@ ws.bus.url.base=http://mhd.sisa.msal.gov.ar/fhir/
 
 app.default.language=es-ES
 app.other.languages=es-ES
+
+ws.sisa.snvs.environment=QA
+ws.sisa.snvs.enabled=false
