--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_30.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_30.yml
@@ -1,3 +1,56 @@
 databaseChangeLog:
     - logicalFilePath: incrementales-v1_30
 
+    - changeSet:
+        id: rest_client_measure-createTable
+        comment: Create table rest_client_measure
+        author: etrapani
+        changes:
+          - createTable:
+              tableName: rest_client_measure
+              columns:
+                - column:
+                      autoIncrement: true
+                      constraints:
+                          primaryKey: true
+                          primaryKeyName: PK_rest_client_measure
+                      name: id
+                      type: bigint
+                - column:
+                      constraints:
+                          nullable: false
+                      name: uri
+                      type: varchar(1024)
+                - column:
+                      constraints:
+                          nullable: false
+                      name: host
+                      type: varchar(255)
+                - column:
+                      constraints:
+                          nullable: false
+                      name: path
+                      type: varchar(255)
+                - column:
+                      constraints:
+                          nullable: false
+                      name: method
+                      type: varchar(8)
+                - column:
+                      constraints:
+                          nullable: false
+                      name: response_code
+                      type: smallint
+                - column:
+                      constraints:
+                          nullable: false
+                      name: response_time_in_millis
+                      type: bigint
+                - column:
+                      constraints:
+                          nullable: false
+                      name: request_date
+                      type: datetime
+                      defaultValueDate: ${date.now}
+
+
