--- a/back-end/sgx-shared/pom.xml
+++ b/back-end/sgx-shared/pom.xml
@@ -24,6 +24,13 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ar.lamansys</groupId>
+			<artifactId>sgx-backoffice</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -194,7 +201,7 @@
 			<artifactId>maven-model</artifactId>
 			<version>2.0.5</version>
 		</dependency>
-	</dependencies>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
