--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -33,6 +33,7 @@
     "angular-calendar": "^0.28.28",
     "chart.js": "^2.9.4",
     "date-fns": "^2.28.0",
+    "angular-oauth2-oidc": "^12.1.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
