tg-5634 Muestra estado de Snowstorm

--- a/back-end/interoperability/pom.xml
+++ b/back-end/interoperability/pom.xml
@@ -41,6 +41,13 @@
         </dependency>
 
         <dependency>
+            <groupId>ar.lamansys.hsi</groupId>
+            <artifactId>extensions</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-base</artifactId>
             <version>${hapifhir.version}</version>
