--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -26,14 +26,18 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
+    "@cubejs-client/core": "^0.28.45",
+    "@cubejs-client/ngx": "^0.28.10",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-calendar": "^0.28.28",
+    "chart.js": "^2.9.3",
     "date-fns": "^2.25.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "ng-recaptcha": "^8.0.1",
+    "ng2-charts": "^2.4.3",
     "ngx-translate-multi-http-loader": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
