--- a/back-end/app/pom.xml
+++ b/back-end/app/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Liquibase Extension: Session Lock Support -->
+        <!-- https://github.com/liquibase/liquibase/issues/1453 -->
+        <dependency>
+            <groupId>com.github.blagerweij</groupId>
+            <artifactId>liquibase-sessionlock</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
