--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_30.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_30.yml
@@ -94,3 +94,43 @@ databaseChangeLog:
               tableName: external_patient
               columnNames: external_id
               constraintName: UQ_external_id
+
+    - changeSet:
+        id: external_encounter-createTable
+        comment: Create table external_encounter
+        author: mvenere
+        changes:
+          - createTable:
+              tableName: external_encounter
+              columns:
+                - column:
+                    autoIncrement: true
+                    constraints:
+                      primaryKey: true
+                      primaryKeyName: PK_external_encounter
+                    name: id
+                    type: int
+                - column:
+                    constraints:
+                      nullable: false
+                    name: external_id
+                    type: varchar(20)
+                - column:
+                    constraints:
+                      nullable: false
+                    name: external_encounter_id
+                    type: varchar(20)
+                - column:
+                    constraints:
+                      nullable: false
+                    name: external_encounter_date
+                    type: datetime
+                - column:
+                    constraints:
+                      nullable: false
+                    name: external_encounter_type
+                    type: varchar(100)
+          - addUniqueConstraint:
+              tableName: external_encounter
+              columnNames: external_encounter_id
+              constraintName: UQ_external_encounter_id
