--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
     "date-fns": "^2.25.0",
+    "file-saver": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-admin": "^3.19.0",
