--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -30,5 +30,7 @@ ws.federar.auth.signKey=federar
 # ===============================
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 
+
+habilitar.boton.consulta=true
 hsi.extensions.rest.url=demo
 app.gateway.cubejs.apiUrl=${CUBEJS_URL:http://localhost:4000/cubejs-api/v1}
