tg-5854 Agrega estado para las reservas

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -159,3 +159,5 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_30.yml
     relativeToChangelogFile: true
+
+# Los forks deberían agregar sus incrementales debajo de esta línea para evitar conflictos
