tg-5866 [P1] Al intentar reportar un caso aparece un error por consola código 500

--- a/back-end/app/src/test/resources/integration-test.properties
+++ b/back-end/app/src/test/resources/integration-test.properties
@@ -78,7 +78,8 @@ google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
 
 
-
+app.feature.HABILITAR_REPORTE_EPIDEMIOLOGICO=false
+ws.sisa.snvs.enabled=false
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
 
