--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -4,6 +4,15 @@
 spring.main.allow-bean-definition-overriding=true
 #spring.jpa.show-sql=true
 
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+
+springdoc.swagger-ui.show-extensions=true
+springdoc.swagger-ui.show-common-extensions=true
+server.error.include-message=always
+server.error.include-binding-errors=always
+springdoc.use-fqn=true
+
 # ============= API =============
 server.servlet.context-path=/api
 server.port = ${SERVER_PORT:8080}
