--- a/back-end/sgx-auth/pom.xml
+++ b/back-end/sgx-auth/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
+            <version>1.18.22</version>
         </dependency>
 
         <dependency>
