--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -13,13 +13,12 @@
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-admin": "^3.19.0",
     "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^2.1.0",
     "react-scripts": "4.0.3",
     "refresh-fetch": "^0.8.0",
     "typescript": "^4.4.4",
@@ -50,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.4",
     "@types/refresh-fetch": "^0.6.1"
   }
 }
